# cs-TypeLox

./: .editorconfig  .gitignore  .rustfmt.toml  Prelude.cs  Program.cs  ProgramMode.cs  Readme.md
Benchmarks/: Fib.bench.lox
Core/: Ansi.cs  Assert.cs  Extensions.cs  IDebug.cs  NestedStringBuilder.cs  Replace.cs  Void.cs
Core/Extensions/: Collections.cs  Path.cs  System.cs  Text.cs
Core/Formatting/: Display.cs  Formatter.cs
Tests/Lox/: Booleans.test.lox  Function.test.lox
Tests/Lox/Logical/: Base.test.lox  (+1 more)
Tests/TypeLox/: pcall.test.lox
TypeLox/: AstNode.cs  AstPrinter.cs  Compiler.cs  CompilerHost.cs  CompilerOptions.cs  CstNode.cs  Diagnostic.cs  Interpreter.cs  LocalDepth.cs  Localized.cs  LoxException.cs  LoxValue.cs  ProgramOptions.cs  Source.cs  Token.cs  TokenKind.cs
TypeLox.Backend.Treewalker/: Env.cs  ILoxCallable.cs  Interpreter.cs  LoxClass.cs  LoxFunction.cs  LoxInstance.cs  LoxRuntimeException.cs  Return.cs  Std.cs
TypeLox.Cli/: ArgsParser.cs  Program.cs  ProgramMode.cs  ProgramOptions.cs
TypeLox.Cli/Testing/: TestResult.cs  TestRunner.cs
TypeLox/Diagnostics/: Diagnostic.cs  DiagnosticLog.cs
TypeLox/Frontend/: ModuleKind.cs  Parser.cs  Resolver.cs  Scanner.cs  SyntaxCheck.cs
cs-TypeLox/: LoxSharp.csproj
cs-TypeLox/TypeLox/: AstPrinter.cs  Source.cs  SourceRange.cs  TokenKind.cs
cs-TypeLox/TypeLox.Backend.Treewalker/: ILoxCallable.cs  LoxInstance.cs  Std.cs
cs-TypeLox/TypeLox.Cli/: ArgsParser.cs  Program.cs  ProgramMode.cs  ProgramOptions.cs
rs-TypeLox/: Cargo.toml
rs-TypeLox/src/: chunk.rs  lib.rs  main.rs  value.rs  vm.rs
(+22 files in other folders)
