[package]
name = "typelox"
version = "0.1.0"
edition = "2024"

[profile.dev]
strip = false
incremental = true
opt-level = 1      # unironically makes it 10× faster 
panic = "unwind"
lto = false

[profile.release]
strip = true
incremental = false
opt-level = 3
panic = "abort"
lto = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
url = "2.5.4"
